test mqtt hivemq